<resources>
    <string name="app_name">Sets - Workout Planner</string>
    <string name="app_name_home">Sets</string>
    <string name="login">Login/Signup</string>
    <string name="profile">Profile</string>
    <string name="exercises">Exercises</string>
    <string name="timer">Timer</string>
    <string name="logout">Logout</string>
    <string name="welcome"> WELCOME </string>
    <string name="profile_picture"> Profile Picture </string>
    <string name="username"> Username </string>


    <!--data exercises-->
    <string name="name">name</string>
    <string name="bodypart">bodypart</string>
    <string name="equipment">equipment</string>
    <string name="target">target</string>
    <string name="gif">Gif Exercises</string>

    <string name="name_placeholder">Name: %s</string>
    <string name="bodypart_placeholder">Bodypart: %s</string>
    <string name="equipment_placeholder">Equipment: %s</string>
    <string name="target_placeholder">Target: %s</string>
    <string name="add_exercise">Add Exercise</string>

    <string name="plus_sign">Add template</string>

    <!--Exercises Fragment-->
    <string name="search_bar_hint">Search Workouts Name</string>

    <!--Fragment Profile Details-->
    <string name="template_name">Template Name: </string>
    <string name="input_name_here">Input Name Here</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="done">DONE</string>

    <!--Fragment Profile-->
    <string name="title_template">Title: %s</string>

    <!--Fragment List Item Profile-->
    <string name="title">Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--Fragment List Item Profile Details-->
    <string name="exercises_name">Exercises Name</string>

    <!--Fragment Timer-->
    <string name="clear">Clear</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="second">Enter Timer In Seconds</string>
    <string name="hh">HH:</string>
    <string name="mm">MM:</string>
    <string name="ss">SS:</string>

    <!--Notification-->
    <string name="notification_description">Timer is done!</string>

</resources>