<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="templates"
            type="com.example.capstone.entities.TemplatesData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_profile_item_id"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:text="@{templates.title}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/edit_button"
            style="@style/EditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:layout_constraintBaseline_toBaselineOf="@id/title_profile_item_id"
            app:layout_constraintEnd_toEndOf="@id/delete_button"
            app:layout_constraintStart_toEndOf="@id/title_profile_item_id" />

        <Button
            android:id="@+id/delete_button"
            style="@style/DeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_profile_item_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_button" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_list_item_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_profile_item_id"
            tools:listitem="@layout/list_item_profile_inner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
